--- a/index.qmd
+++ b/index.qmd
@@ -1,24 +1,26 @@
 ---
 title: "Animal-tracking in Biologia della Conservazione"
 author: Giuliano Colosimo
-date: "2023-09-18"
-bibliography: /Users/giulianocolosimo/Dropbox/manuscripts/literature/bibtex/comprehensive_database.bib
-csl: /Users/giulianocolosimo/Dropbox/manuscripts/literature/bibtex/apa_5th_edition.csl
+date: "2024-04-29"
+bibliography: /Users/giulianocolosimo/Library/CloudStorage/ProtonDrive-giuliano.colosimo@protonmail.com/manuscripts/literature/bibtex/comprehensive_database.bib
+csl: /Users/giulianocolosimo/Library/CloudStorage/ProtonDrive-giuliano.colosimo@protonmail.com/manuscripts/literature/bibtex/apa_5th_edition.csl
 citation_package: biblatex
 citecolor: "red"
 ---
 
 # Introduction
 
-Welcome to class! These web-pages contain all the information you need to accomplish your class work for  **Animal-Tracking nella Biologia della Conservazione** ( 2023-2024).
+Welcome to class! These web-pages contain all the information you need to accomplish your class work for  **Animal-Tracking nella Biologia della Conservazione** (2023-2024).
+
+<img src="./randomwalk/random_walk_simulation.gif" alt="My cool gif" width="800" height="600">
 
 # General information
 
-This is an discretionary course for master level students enrolled in the "Biologia Evoluzionistica, Ecologia e Antropologia Applicata" (BEEA) degree at the University of Rome Tor Vergata. It is worth **2 CFU** for a total of 16 hours (i.e., 8 classes of 2 hours each) to be administered in person during the first semester of academic year 2023/2024.
+This is an discretionary course for master level students enrolled in the "Biologia Evoluzionistica, Ecologia e Antropologia Applicata" (BEEA) degree at the University of Rome Tor Vergata. It is worth **2 CFU** for a total of 16 hours (i.e., 8 classes of 2 hours each) to be administered in person or remotely using Teams during the second semester of academic year 2023/2024.
 
 
 ::: callout-note
-As attendance is mandatory I will work with enrolled students to find the best time and day so that all can follow the class in person! 
+As attendance is mandatory I will work with enrolled students to find the best time and day so that all can follow the class in person! If needed, we will change the delivery and we could make the class on-line using the Teams platform.
 :::
 
 
@@ -28,7 +30,7 @@ library(kableExtra)
 schedule <- data.frame(" " = c("Lectures", "Final exam"),
                        "Day" = c("To be decided", "To be decided"),
                        "Time" = c("To be decided", "To be decided"),
-                       "Location" = c("Aula centro studi pesca", "Aula centro studi pesca"))
+                       "Location" = c("Aula centro studi pesca/Teams", "Aula centro studi pesca/Teams"))
 kable(schedule, col.names = c(" ", "Day", "Time", "Location"),
       caption = "Tentative schedule. This may change after coordinating with the students on the best time/day for classes.")
 ```
